<resources>
    <string name="app_name">Pokedex</string>

    <string name="hello_blank_fragment">Hello!</string>
    <string name="image_of_pokemon">Image of Pokemon</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_item_list">Item List</string>
    <string name="title_setting">Setting</string>
    <string name="title_move_list">Move List</string>
    <string name="title_favorite">Favorite</string>
    <string name="search">search</string>
    <string name="normal">Normal</string>
    <string name="fire">Fire</string>
    <string name="fighting">Fighting</string>
    <string name="water">Water</string>
    <string name="flying">Flying</string>
    <string name="grass">Grass</string>
    <string name="poison">Poison</string>
    <string name="electric">Electric</string>
    <string name="ground">Ground</string>
    <string name="psychic">Psychic</string>
    <string name="rock">Rock</string>
    <string name="ice">Ice</string>
    <string name="bug">Bug</string>
    <string name="dragon">Dragon</string>
    <string name="ghost">Ghost</string>
    <string name="dark">Dark</string>
    <string name="steel">Steel</string>
    <string name="fairy">Fairy</string>
    <string name="unknown">\?\?\?</string>
    <string name="damage">Damage</string>


</resources>
